More flexiable rules for animate.css close #1

--- a/examples/example-animated-layers.html
+++ b/examples/example-animated-layers.html
@@ -67,7 +67,10 @@
 			<div class="swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=144&bg=222222&txt=Slide1&w=640&h=480)">
 				<div class="swiper-slide-content">
 					<h1 class="layer" data-animate="fadeInUp">This is animation</h1>
-					<h2 class="layer" data-animate="fadeInUp" data-delay="0.3s" data-duration="1.0s">This is animation2</h2>
+					<!-- With delay custom delay -->
+					<h2 class="layer" data-animate="fadeInUp" data-delay="0.8s" data-duration="1.0s">This is animation2</h2>
+					<!-- Without Custom delay -->
+					<h2 class="layer" data-animate="fadeInUp" data-duration="1.0s">This is animation3</h2>
 				</div>
 			</div>
 			<div class="swiper-slide" style="background-image:url(https://placeholdit.imgix.net/~text?txtsize=144&bg=222222&txt=Slide2&w=640&h=480)">
