IE bug fixes and changed plugin name

--- a/examples/example-animated-layers.html
+++ b/examples/example-animated-layers.html
@@ -131,7 +131,7 @@
 
 	<!-- Initialize Swiper Runner -->
 	<script>
-		var obj = new swiperRunner('.swiper-container');
+		var obj = new SwiperRunner('.swiper-container');
 	</script>
 </body>
 </html>
