--- a/examples/example-two-way-gallery.html
+++ b/examples/example-two-way-gallery.html
@@ -102,7 +102,7 @@
 
 	<!-- Initialize Swiper Runner -->
 	<script>
-		var obj = new swiperRunner('.gallery-top');
+		var obj = new SwiperRunner('.gallery-top');
 		// The setNav method will make link to main carousel.
 		obj.setNav('.gallery-thumbs');
 	</script>
