--- a/examples/example-regular.html
+++ b/examples/example-regular.html
@@ -81,7 +81,7 @@
 	<script>
 		// This scrip will automatically understand the configuration from the data-swiper-config attribute in css selector,
 		// Auto rendering pagination, nav and scrollbar if default selector is found in .swiper-container div.
-		var goRunner = new swiperRunner('.swiper-container');
+		var goRunner = new SwiperRunner('.swiper-container');
 	</script>
 </body>
 </html>
