Changed plugin file name

--- a/examples/example-animated-layers.html
+++ b/examples/example-animated-layers.html
@@ -127,7 +127,7 @@
 	<!-- Load Dependencies -->	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
-	<script src="../dist/js/swiperRunner.min.js"></script>
+	<script src="../dist/js/SwiperRunner.min.js"></script>
 
 	<!-- Initialize Swiper Runner -->
 	<script>
